--- a/app/src/main/res/layout/covid_item_layout.xml
+++ b/app/src/main/res/layout/covid_item_layout.xml
@@ -16,14 +16,14 @@
         <TextView
             android:id="@+id/city_textview"
             android:layout_height="wrap_content"
-            android:layout_width="0dp"
+            android:layout_width="wrap_content"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toStartOf="@id/date_textview"
             tools:text = "City Name"
             android:textStyle="bold"
             android:layout_margin="16dp"
-            android:textSize="24dp"
+            android:textSize="24sp"
             />
 
         <TextView
@@ -37,7 +37,7 @@
             tools:text = "mm/dd/yyyy"
             android:textStyle="bold"
             android:layout_margin="16dp"
-            android:textSize="16dp"
+            android:textSize="16sp"
             />
 
 
